# mitzee

./: ProjectHome.md  README.md  cleano.sh  gitin.sh
buflea/: CMakeLists.txt  buflea.cbp  buflea.depend  buflea.layout  buflea.layout.save  buflea.odt  certs.txt  certs.txt~  configprx.cpp  configprx.h  context.cpp  context.h  context4.cpp  context4.h  context5.cpp  context5.h  contextctl.cpp  contextctl.h  contextdns.cpp  contextdns.h  contexthttp.cpp  contexthttp.h  contextpass.cpp  contextpass.h  contextreg.cpp  contextreg.h  ctxthread.cpp  ctxthread.h  dnsthread.cpp  dnsthread.h  httphdr.cpp  listeners.cpp  listeners.h  main.cpp  main.h  makecerts.sh  sslcrypt.cpp  sslcrypt.h  tasker.cpp  tasker.h  (+4 more)
mcoinclude/: config.cpp  config.h  consts.h  errorstrings.h  matypes.h  minidb.cpp  minidb.h  modiface.h  os.h  procinst.h  sslcrypt.cpp  sslcrypt.h  strutils.h
mcosocks/: CMakeLists.txt  Makefile  cmake_install.cmake  enetsocklib.cbp  enetsocklib.depend  enetsocklib.layout  enetsocklib.layout.save  sock.cpp  sock.h
miki/: CMakeLists.txt  config.cpp  config.h  main.cpp  message.cpp  message.cpp.save  message.h  miki.cbp  miki.depend  miki.layout  miki.layout.save  theapp.cpp  theapp.h  udpsock.cpp  udpsock.h  watcher.cpp  watcher.h
mitza/: cleano.sh  mitza.cbp  mitza.depend  mitza.layout  ssl-client.c
mitza/var-www-mitza/: ip8888.txt  visitors.php
oohshell/: CMakeCache.txt  CMakeLists.txt  Makefile  README  argspars.cpp  argspars.h  clicontext.cpp  clicontext.h  cmake_install.cmake  ft.cpp  ftcontext.cpp  ftcontext.h  main.cpp  main.h  oohngine.cpp  oohngine.h  oohshell.cbp  oohshell.cbp~  oohshell.depend  oohshell.layout  openprompt.depend  openprompt.layout  tcppipe.cpp  tcppipe.h  ttyptmdev.cpp  ttyptmdev.h
pidisc/: CMakeLists.txt  README  install.sh  main.cpp  pidisc  pidisc.sysV  pilocator.cbp  pilocator.pro
pidisc/qupidisc/: Makefile  README  dialog.cpp  dialog.h  dialog.ui  main.cpp  moc_dialog.cpp  qupidisc  qupidisc.pro  udpsocks.cpp  udpsocks.h  ui_dialog.h
pizu/: CMakeLists.txt  config.cpp  config.h  context.cpp  context.h  ctxqueue.cpp  ctxqueue.h  ctxthread.cpp  ctxthread.h  httprequest.cpp  httprequest.h  index.php  listeners.cpp  listeners.h  main.cpp  main.h  mimes.conf  modiface.cpp  modules.cpp  modules.h  pizu.cbp  pizu.depend  pizu.layout  prxthread.cpp  prxthread.h  sslcrypt.cpp  sslcrypt.h  threadpool.cpp  threadpool.h  tinyclasses.cpp  tinyclasses.h
pizu/plugins/admin/: CMakeCache.txt  CMakeLists.txt  Makefile  admin_mod.cbp  (+6 more)
pizu/plugins/sq/: CMakeCache.txt  CMakeLists.txt  Makefile  MakefileOld  cmake_install.cmake  globalfoos.cpp  globalfoos.h  main.cpp  main.h  prev_1sqmod.cpp  sq_mod.cbp  sq_mod.depend  sq_mod.layout  sqmod-mumime.cpp  sqmod.cpp  sqmod.h  sqwrap-nw.cpp  sqwrap.cpp  sqwrap.h
pizu/plugins/sq/sq/: Makefile  mariusqt-build-desktop  sq.cbp  sq.depend  sq.layout  sqso.layout
pizu/plugins/sq/sq/include/: squirrel.h
pizu/plugins/sq/sq/sqrat/: sqrat  sqrat.layout
pizu/plugins/sq/sq/sqrat/include/sqrat/: sqratAllocator.h  sqratArray.h  sqratClass.h  sqratFunction.h  sqratScript.h  sqratTable.h  sqratUtil.h  sqratVM.h
pizu/plugins/sq/sq/sqstdlib/: sqstdblob.cpp  sqstdio.cpp  sqstdlib.cbp  sqstdlib.depend  sqstdlib.layout  sqstdsystem.cpp
pizu/plugins/sq/sq/squirrel/: sqbaselib.cpp  sqclosure.h  sqcompiler.cpp  sqmem.cpp  sqobject.h  sqstate.cpp  sqstate.h  squtils.h
tuls/: mkcerts.sh  openssl.cnf.readme
(+10 files in other folders)
